[package]
name = "cyborg-oracle-feeder"
description = "An oracle feeder, designed to monitor the health of the cyborg edge computing workers, built, among others with Polkadot Sdk. (polkadot v1.13.0)"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
homepage = "https://cyborgnetwork.io/"
repository = "https://github.com/Cyborg-Network/cyborg-oracle-feeder/"
publish = false

[dependencies]
ezkl = { git = "https://github.com/zkonduit/ezkl.git", tag = "v20.2.0" }
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.133"
subxt = "0.38.0"
subxt-signer = "0.38.0"
tokio = { version = "1.41.1", features = ["full"] }
tempfile = "3.20.0"
once_cell = "1.21.3"
derive_more = { version = "2.0.1", features = ["from"] }
dotenv = "0.15.0"
